--- a/styles/style.css
+++ b/styles/style.css
@@ -440,3 +440,65 @@ input::placeholder {
   transform: scale(1.1); 
 }
 /* sec5^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
+.footer{
+  background-color: var(--black-700);
+  width: 1440px;
+  height: 376px;
+  position: absolute;
+  top: 3975px;
+  color: #fff;
+  
+}
+.f-i1{
+  display: flex;
+  flex-direction: row;
+  gap: 80px;
+  margin: 79px 120px 53px 100px;
+  font-family: poppinsRegular;
+}
+#f1-logo{
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 15px;
+}
+#f1-p{
+  font-size: 16px;
+  margin-bottom: 25px;
+}
+#f1-f{
+  font-size: 16px;
+  font-weight: 400;
+}
+
+
+#f2-about{
+  margin-bottom: 15px;
+  font-size: 17px;
+  font-weight: 500;
+}
+#f-li{
+  list-style: none;
+  font-size: 16px;
+}
+#f3-contact{
+  margin-bottom: 20px;
+  font-size: 17px;
+}
+#f3-p{
+  margin-bottom: 11px;
+  font-size: 16px;
+}
+.ftr4{
+  margin-top:100px ;
+}
+
+.f-line{
+  background-color: #fff;
+  width: 1440px;
+  height: 0.7px;
+  margin-bottom: 29px;
+}
+#f-i2{
+  text-align: center;
+  margin-bottom: 29px;
+}
