--- a/styles/style2.css
+++ b/styles/style2.css
@@ -194,3 +194,44 @@
     color: #fff;
 }
   /* sec1^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
+  .sec2{
+    display: flex;
+    flex-direction: row;
+    gap: 43px;
+    position: absolute;
+    top: 1029px;
+    left: 110px;
+    font-family: poppinsRegular;
+    margin-bottom: 147px;
+  }
+  .boxs{
+    background-color: var(--box_bg);
+    color: #fff;
+    border-radius:20px ;
+  }
+ 
+  .b{
+    width: 140px;
+    height: 39px;
+    font-size: 14px;
+    border-radius: 8px;
+    margin: 64px 201px 19px 37px;
+    padding: 7px 35px 6px 14px;
+  }
+  #n1{
+    background-color:rgba(176, 0, 220, 0.11);
+  }
+  #n2{
+    background: rgba(220, 66, 0, 0.11);
+
+  }
+  #n3{
+    background: rgba(0, 220, 141, 0.11);
+  }
+  .p1{
+    margin: 19px 171px 16px 37px;
+    font-size: 20px;
+  }
+  .p2{
+    margin: 16px 37px 64px 37px;
+  }
